# skiros2_pyrobosim_lib

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
docs/: 0_Start.md  1_Problem_1_Object_Fetch.md  2_Problem_2_Waste_Disposal.md  3_Problem_3_Table_Setting.md  4_Problem_4_Table_Waste_Charge.md  Planning.md
launch/: main.launch  main.launch.py
owl/: p1_scene.turtle  p2_scene.turtle  p3_scene.turtle  p4_scene.turtle  robi_robot_description.owl  xyz_robot_description.owl
pddl/: problem2.pddl  problem3.pddl  problem4.pddl  solution1.pddl  solution2.pddl  solution3.pddl  solution4.pddl  test.pddl
pddl/solutions/: problem1.pddl  problem2.pddl  problem3.pddl  problem4.pddl
planning/: problem1.pddl  problem2.pddl  problem3.pddl  problem4.1.pddl  problem4.2.pddl  roscon.code-workspace  skiros.pddl
planning/solutions/: problem1.pddl  problem2.pddl  problem3.pddl  problem4.1.pddl  problem4.2.pddl  problem4.pddl
scripts/: link_generated_pddl_files.sh  update_battery_percentage.py  yaml_world_to_turtle.py
skiros2_pyrobosim_lib/: basic_compound_skills.py  compound_skills.py  extra_compound_skills.py  own_skills.py  planner.py  primitive_skills.py  problem_1_fetch_item.py  problem_2_waste_and_doors.py  problem_3_table_setting.py  problem_4_charge.py  problem_skills.py  pyrobosim_compound_skills.py  pyrobosim_primitive_skills.py  pyrobosim_primitives.py  pyrobosim_skills.py  pyrobosim_solutions.py  reasoning_skills.py  solutions.py  task_planning.py  utils.py  xtra_advanced_skills.py
skiros2_pyrobosim_lib/utils/: blackboard.py  value_skills.py
src/skiros2_template_lib/: template_primitives.py  template_skills.py
