<?xml version="1.0"?>
<package>
  <name>skiros2_template_lib</name>
  <version>0.0.1</version>
  <description>Template of a library for skiros2</description>

  <maintainer email="author@domain.org">Author</maintainer>
  <license>BSD</license>
  <author email="author@domain.org">Author</author>
  <author>Author</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>skiros2_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>skiros2_msgs</run_depend>
  <run_depend>skiros2_common</run_depend>
  <run_depend>skiros2_skill</run_depend>
</package>
