<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>skiros2_template_lib</name>
  <version>2.0.0</version>
  <description>Template of a library for skiros2</description>

  <maintainer email="francesco@m-tech.aau.dk">Francesco Rovida</maintainer>
  <maintainer email="matthias.mayr@cs.lth.se">Matthias Mayr</maintainer>
  <license>L-GPL</license>
  <author email="francesco@m-tech.aau.dk">Francesco Rovida</author>
  <author email="matthias.mayr@cs.lth.se">Matthias Mayr</author>


  <exec_depend>rclpy</exec_depend>
  <exec_depend>skiros2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>